# openclaw-command-center

./: .env.example  .gitignore  CLAUDE_CONTEXT.md  Dockerfile  docker-compose.prod.yml  docker-compose.yml  push-default-layout.sh  pyproject.toml
.github/workflows/: deploy.yml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/canvas/: CanvasRenderer.tsx  callback.ts  registry.ts  types.ts  useCanvasSocket.ts
frontend/src/canvas/components/: AlertBanner.tsx  ApprovalCard.tsx  BarChart.tsx  Clock.tsx  CostMeter.tsx  DataTable.tsx  Form.tsx  GatewayLog.tsx  LeoStatus.tsx  ListCard.tsx  OllamaMonitor.tsx  ProgressBar.tsx  QuickAction.tsx  StatusCard.tsx  SystemHealth.tsx  TaskCard.tsx  TextBlock.tsx
frontend/src/styles/: base.css  canvas.css
server/: main.py
