[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "leo-command-center"
version = "1.0.0"
description = "Leo Prime Command Center — monitoring and control dashboard"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "psutil>=5.9",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
